--- a/lib/components/fo_button/fo_button_component.scss
+++ b/lib/components/fo_button/fo_button_component.scss
@@ -11,7 +11,7 @@
     -webkit-user-select: none;
     transition: color 0.3s ease, background-color 0.3s ease;
     cursor: pointer;
-    padding: $small 44px;
+    padding: $small $x-large;
     outline: none;
     border-width: 1px 0;
     border-style: solid;
@@ -36,7 +36,7 @@
 
 :host[dense] {
   button {
-    padding: $small 31px;
+    padding: $small $large;
     line-height: $font-size-4;
     font-size: 1rem;
   }
@@ -51,4 +51,6 @@
 
 :host[fullWidth] {
   width: 100%;  
+  padding-left: $small;
+  padding-right: $small;
 }
