fixed padding on fullWidth

--- a/lib/components/fo_button/fo_button_component.scss
+++ b/lib/components/fo_button/fo_button_component.scss
@@ -51,6 +51,8 @@
 
 :host[fullWidth] {
   width: 100%;  
-  padding-left: $small;
-  padding-right: $small;
+  button {
+    padding-left: $small;
+    padding-right: $small;
+  }
 }
