Added button clearSize attribute

--- a/lib/components/fo_button/fo_button_component.scss
+++ b/lib/components/fo_button/fo_button_component.scss
@@ -49,6 +49,13 @@
   }
 }
 
+:host[clearSize] {
+  button {
+    padding-left: $x-small;
+    padding-right: $x-small;
+  }
+}
+
 :host[fullWidth] {
   width: 100%;  
   button {
