--- a/lib/components/fo_dropdown_select/_mixins.scss
+++ b/lib/components/fo_dropdown_select/_mixins.scss
@@ -1,10 +1,11 @@
 @import 'package:angular_components/material_icon/mixins';
 @import '../fo_dropdown_list/mixins';
+@import '../fo_label/mixins';
+
 @mixin fo-dropdown-select-font-size($size) {
   ::ng-deep fo-dropdown-select {
-    div#labelContainer {
-      font-size: $size !important;
-    }
+    @include fo-label-font-size($size);
+    
     div#selector {
       font-size: $size;
       @include material-icon-size($size !important);
