Fixed some analysis errors

--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -21,6 +21,7 @@
     display: flex;
     align-items: center;    
     transition: box-shadow $transitionSpeed;
+    border-radius: $borderRadius;
     material-icon {
       box-shadow: none;
       -webkit-box-shadow: none;
