--- a/lib/components/fo_panel/fo_panel_component.html
+++ b/lib/components/fo_panel/fo_panel_component.html
@@ -1,6 +1,6 @@
 <div id="foPanel" *ngIf="visible">
   <div id="panelHeader">
-    <h3>{{title | name}}</h3>
+    <h3>{{title | capitalize}}</h3>
     <material-button dense
                      clear-size
                      baseline
