--- a/lib/components/fo_text_input/fo_error_output_component.html
+++ b/lib/components/fo_text_input/fo_error_output_component.html
@@ -1,3 +1,3 @@
 <div id="arrow"></div>
 <div id="message"
-     class="black-color">{{message | name}}</div>
+     class="black-color">{{message | capitalize}}</div>
