FoButton left/rightBorder inputs now regular attributes instead

--- a/lib/components/fo_button/_mixins.scss
+++ b/lib/components/fo_button/_mixins.scss
@@ -3,7 +3,7 @@
   ::ng-deep fo-button {
     button.themeable {
       font-size: $size !important;      
-      @include material-icon-size($size !important);
+      @include material-icon-size($size * 1.5 !important);
     }
   }
 } 
