--- a/lib/components/fo_button/fo_button_component.scss
+++ b/lib/components/fo_button/fo_button_component.scss
@@ -6,14 +6,14 @@
   button {
     width: 100%;
     font-size: 1rem;
-    @include material-icon-size(1rem);
+    @include material-icon-size(1.5rem);
     user-select: none;
     -webkit-user-select: none;
     transition: color 0.3s ease, background-color 0.3s ease;
     cursor: pointer;
     padding: $small $x-large;
     outline: none;
-    border-width: 1px 0;
+    border-width: 1px;
     border-style: solid;
     box-sizing: border-box;
     color: white;
@@ -21,16 +21,23 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;    
+    border-radius: $x-small;
+}
+}
+
+:host[noLeftBorder] {
+  button {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+    border-left-width: 0;
   }
-  button.leftBorder {
-    border-top-left-radius: $x-small;
-    border-bottom-left-radius: $x-small;
-    border-left-width: 1px;
-  }
-  button.rightBorder {
-    border-top-right-radius: $x-small;
-    border-bottom-right-radius: $x-small;
-    border-right-width: 1px;
+}
+
+:host[noRightBorder] {
+  button {
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-right-width: 0;
   }
 }
 
