--- a/lib/components/fo_carousel/fo_carousel_component.html
+++ b/lib/components/fo_carousel/fo_carousel_component.html
@@ -3,35 +3,34 @@
        [style.transform]="transform">
     <ng-content></ng-content>
   </div>
-  <div class="row"
+  <div id="radioButtons"
        *ngIf="showRadioButtons == true">
-    <div class="col text-center">
-      <material-radio-group class="no-left-margin">
-        <material-radio *ngFor="let slide of slides; let i=index"
-                        [checked]="step == i"
-                        (checkedChange)="onButtonChange(i, $event)"></material-radio>
-      </material-radio-group>
-    </div>
+    <material-radio-group class="no-left-margin">
+      <material-radio *ngFor="let slide of slides; let i=index"
+                      [checked]="step == i"
+                      (checkedChange)="onButtonChange(i, $event)"></material-radio>
+    </material-radio-group>
   </div>
   <ng-container *ngIf="showArrowButtons">
     <div class="arrow"
          [class.faded]="step <= 0"
          id="arrow-left">
-      <material-button raised
-                       clear-size
-                       (click)="stepBy(-1)">
-        <material-icon icon="keyboard_arrow_left"></material-icon>
-      </material-button>
+      <fo-button clearSize
+                 white
+                 noHover
+                 (trigger)="stepBy(-1)"
+                 icon="keyboard_arrow_left">
+      </fo-button>
     </div>
     <div class="arrow"
          [class.faded]="step >= slides.length - 1"
          id="arrow-right">
-      <material-button raised
-                       clear-size
-                       (click)="stepBy(1)">
-        <material-icon class="clickable"
-                       icon="keyboard_arrow_right"></material-icon>
-      </material-button>
+      <fo-button clearSize
+                 white
+                 noHover
+                 icon="keyboard_arrow_right"
+                 (trigger)="stepBy(1)">
+      </fo-button>
     </div>
   </ng-container>
 </div>
