--- a/example/web/style.scss
+++ b/example/web/style.scss
@@ -4,5 +4,6 @@ html {
     max-width: 1280px;
     margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;    
+    padding: 2rem 0;
   }
 }
