Fixed a bunch of messages

--- a/lib/components/fo_multi_select/fo_multi_select_component.html
+++ b/lib/components/fo_multi_select/fo_multi_select_component.html
@@ -7,7 +7,7 @@
                           id="select">
   <div *ngIf="showSearch"
        header>
-    <material-select-searchbox [label]="msg.search()"
+    <material-select-searchbox [label]="msgSearch"
                                [filterable]="selectionOptions">
     </material-select-searchbox>
   </div>
