--- a/lib/components/fo_number_input/fo_number_input_component.html
+++ b/lib/components/fo_number_input/fo_number_input_component.html
@@ -40,7 +40,7 @@
     <div class="row padding-top-small"
          *ngIf="popupVisible">
         <div class="col">
-            <material-input [label]="msg.enter_value() | capitalize"
+            <material-input [label]="msgEnterValue | capitalize"
                             floatingLabel
                             inputmode="numeric"
                             type="tel"
