--- a/example/lib/section/section.scss
+++ b/example/lib/section/section.scss
@@ -1,8 +1,10 @@
 :host {
   display: block;
+
   h3 {
     margin-bottom: 0;
   }
+
   pre {
     margin: 0;
   }
@@ -11,23 +13,29 @@
     display: flex;
     align-items: center;
     border: 1px solid #999;
+    flex-flow: wrap;
 
     div.left,
     div.right {
-
-      flex: 0.5;
       padding: 1rem;
     }
 
-    //div.left {}
+    div.left {
+      flex: 0.5;
+    }
 
     div.right {
+      flex: 0.5;
+
       code {
         background-color: #666;
         color: white;
         padding: 2rem;
         display: block;
+        white-space: pre-wrap;        
       }
+
+
       div#notes {
         margin-top: 1rem;
       }
