--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -15,7 +15,7 @@
         <material-input class="text-left"
                         [displayBottomPanel]="false"
                         [disabled]="disabled"
-                        label="{{msg.filter()}}"
+                        label="{{msgFilter | capitalize}}"
                         trailingGlyph="search"
                         [(ngModel)]="searchPhrase"
                         (change)="onFilterChange($event)"
@@ -120,7 +120,7 @@
                 <material-icon baseline
                                size="x-large"
                                icon="error"></material-icon>
-                {{msg.no_results_found() | capitalize}}
+                {{msgNoResultsFound | capitalize}}
             </p>
         </div>
     </div>
@@ -133,7 +133,7 @@
                                  raised
                                  dense
                                  [disabled]="disabled || data?.isEmpty == true"
-                                 [materialTooltip]="msg.download_csv()"
+                                 [materialTooltip]="msgDownloadCsv"
                                  (trigger)="onDownloadDataCSV()">
                     <material-icon class="black-color"
                                    size="medium"
@@ -145,7 +145,7 @@
                                  raised
                                  dense
                                  [disabled]="disabled"
-                                 [materialTooltip]="msg.add()"
+                                 [materialTooltip]="msgAdd"
                                  (trigger)="onAddController.add('')">
                     <material-icon class="black-color"
                                    size="medium"
@@ -158,7 +158,7 @@
             <div id="select-step">
                 <div class="float-right"
                      id="rows-per-page">
-                    <span>{{msg.row(2)}}/{{msg.page(1)}}:&nbsp;</span>
+                    <span>{{msgRows}}/{{msgPage}}:&nbsp;</span>
                     <fo-select class="display-inline-block"
                                [disabled]="disabled"
                                [options]="rowOptions"
@@ -173,7 +173,7 @@
                                    icon="navigate_before"
                                    (click)="step(-1)">
                     </material-icon>
-                    {{msg.page(1)}} {{currentPage}}/{{totalPages}} ({{filteredKeys.length}} {{msg.row(2)}})
+                    {{msgPage}} {{currentPage}}/{{totalPages}} ({{filteredKeys.length}} {{msgRows}})
                     <material-icon class="clickable vertical-align-middle"
                                    [class.disabled]="lastIndex >= filteredKeys.length"
                                    icon="navigate_next"
@@ -191,7 +191,7 @@
     <div class="l4 m6 col">
         <div class="batch-operations-container box-shadow"
              [class.expanded]="selectedRows.isNotEmpty">
-            <fo-select [label]="msg.with_selected()"
+            <fo-select [label]="msgWithSeleced"
                        [showActionButton]="true"
                        actionButtonText="go"
                        [disabled]="disabled || selectedRows == null || selectedRows.isEmpty"
@@ -204,26 +204,26 @@
     </div>
 </div>
 
-<fo-modal title="{{msg.confirm() | capitalize}}"
+<fo-modal title="{{msgConfirm | capitalize}}"
           [smallPadding]="false"
           [visible]="deleteBufferId != null"
           (visibleChange)="deleteBufferId = null"
           [showCloseButton]="false">
-    <p>{{msg.confirm_delete_resource()}}</p>
+    <p>{{msgConfirmDeleteResource}}</p>
     <p class="text-right margin-bottom-none"
        footer>
         <material-button raised
                          (trigger)="deleteBufferId = null">
-            {{msg.cancel()}}
+            {{msgCancel}}
         </material-button>
         <material-button raised
                          (trigger)="onDeleteController.add(deleteBufferId); deleteBufferId = null;">
-            {{msg.ok()}}
+            {{msgOk}}
         </material-button>
     </p>
 </fo-modal>
 
-<fo-modal [title]="msg.information()"
+<fo-modal [title]="msgInformation"
           [smallPadding]="false"          
           [(visible)]="infoModalOpen"
           [showCloseButton]="true">
