--- a/lib/components/fo_data_table/fo_data_table_component.scss
+++ b/lib/components/fo_data_table/fo_data_table_component.scss
@@ -1,9 +1,10 @@
+@import 'package:grid/grid';
 @import '../../mixins.scss';
 
 :host {
     display: block;
     width: 100%;
-    color: #555;
+    color: #555;    
     .display-inline-block {
         display: inline-block;
     }
