Got rid of MessagesService

--- a/lib/components/fo_image_file/fo_image_file_component.html
+++ b/lib/components/fo_image_file/fo_image_file_component.html
@@ -32,5 +32,5 @@
          (change)="onFileChange($event)"
          [accept]="accept" />
   <p *ngIf="invalidFile"
-     class="error-output background-color-alert-bright">{{msg.invalid_file()}}</p>
+     class="error-output background-color-alert-bright">{{msgInvalidFile}}</p>
 </div>
