--- a/example/web/style.scss
+++ b/example/web/style.scss
@@ -2,6 +2,7 @@ html {
   overflow-y: scroll;
   body {
     max-width: 1280px;
+    min-height: 100vh;
     margin: 0 auto;
     font-family: Arial, Helvetica, sans-serif;    
     padding: 2rem 0;
