--- a/lib/components/fo_carousel/fo_carousel_component.scss
+++ b/lib/components/fo_carousel/fo_carousel_component.scss
@@ -1,5 +1,5 @@
 @import 'package:angular_components/material_button/mixins';
-@import 'package:grid/constants.scss';
+@import 'package:grid_css/constants.scss';
 :host {
   display: block;
   #radioButtons {
