--- a/lib/components/fo_modal/fo_modal_component.scss
+++ b/lib/components/fo_modal/fo_modal_component.scss
@@ -1,5 +1,5 @@
 @import 'package:angular_components/material_dialog/mixins';
-@import 'package:grid/constants';
+@import 'package:grid_css/constants';
 @import 'package:fo_components/mixins';
 
 material-dialog.small-padding {
