--- a/lib/components/fo_text_input/fo_text_input_component.scss
+++ b/lib/components/fo_text_input/fo_text_input_component.scss
@@ -1,4 +1,4 @@
-@import'package:grid/constants';
+@import 'package:grid_css/constants';
 @import '../../constants.scss';
 @import '../../mixins.scss';
 @import '../fo_button/mixins';
