DataTable now has FoButton, FoInput and FoSelect instead of material

--- a/lib/components/fo_text_input/fo_text_input_component.html
+++ b/lib/components/fo_text_input/fo_text_input_component.html
@@ -14,7 +14,8 @@
            [class.rightPadding]="clearIcon == true"
            [class.color-alert]="control?.valid == false && control?.pristine != true"
            [ngModel]="value"
-           (ngModelChange)="onValueChange($event)"
+           (ngModelChange)="onValueChange($event)"           
+           (change)="changeController.add($event)"
            (focus)="onFocus($event)"
            (blur)="hasFocus = false"
            type="text">           
