--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -1,231 +1,206 @@
 <div class="row expand collapse">
-    <div class="m7 l8 col">
-        <h3 class="margin-bottom-none">
-            {{label | capitalize}}
-            <material-icon baseline
-                           size="large"
-                           *ngIf="description != null"
-                           icon="help_outline"
-                           (click)="infoModalOpen = true"
-                           class="clickable">
-            </material-icon>
-        </h3>
-    </div>
-    <div class="m5 l4 col text-right">
-        <material-input class="text-left"
-                        [displayBottomPanel]="false"
-                        [disabled]="disabled"
-                        label="{{msgFilter | capitalize}}"
-                        trailingGlyph="search"
-                        [(ngModel)]="searchPhrase"
-                        (change)="onFilterChange($event)"
-                        (keyup)="onSearchKeyUp($event)">
-        </material-input>
-    </div>
+  <div class="m7 l8 col">
+    <h3 class="margin-bottom-none"> {{label | capitalize}} <material-icon baseline
+                     size="large"
+                     *ngIf="description != null"
+                     icon="help_outline"
+                     (click)="infoModalOpen = true"
+                     class="clickable">
+      </material-icon>
+    </h3>
+  </div>
+  <div class="m5 l4 col text-right">
+    <fo-text-input class="text-left"
+                   [disabled]="disabled"
+                   [label]="msgFilter | capitalize"
+                   trailingGlyph="search"
+                   [(ngModel)]="searchPhrase"
+                   (change)="onFilterChange()"
+                   (keyup)="onFilterKeyUp($event)">
+    </fo-text-input>
+  </div>
 </div>
-
 <div class="table-container box-shadow">
-    <div class="output-container">        
-        <table [class.faded]="disabled"
-               class="output margin-bottom-x-small">
-            <thead>
-                <tr>
-                    <td *ngIf="showCheckboxes">
-                        <material-checkbox [(checked)]="allChecked"></material-checkbox>
-                    </td>
-                    <td *ngIf="errorFunction != null"></td>
-                    <td *ngFor="let cell of columns.keys"
-                        (click)="onSort(cell)">
-                        <span>{{columns[cell]}}</span>
-                        <material-icon baseline
-                                       size="small"
-                                       [class.hidden]="sortColumn != cell || sortOrder == 'DESC'"
-                                       icon="keyboard_arrow_up"></material-icon>
-                        <material-icon baseline
-                                       size="small"
-                                       [class.hidden]="sortColumn != cell || sortOrder == 'ASC'"
-                                       icon="keyboard_arrow_down"></material-icon>
-                    </td>
-                    <td *ngFor="let cell of evaluatedColumns.keys"
-                        (click)="onSort(cell)">
-                        <span>{{cell}}</span>
-                        <material-icon baseline
-                                       size="small"
-                                       [class.hidden]="sortColumn != cell || sortOrder == 'DESC'"
-                                       icon="keyboard_arrow_up"></material-icon>
-                        <material-icon baseline
-                                       size="small"
-                                       [class.hidden]="sortColumn != cell || sortOrder == 'ASC'"
-                                       icon="keyboard_arrow_down"></material-icon>
-                    </td>
-                    <td *ngIf="showDeleteButtons"
-                        class="buttonCell"></td>
-                </tr>
-            </thead>
-            <tbody *ngIf="filteredKeys.isNotEmpty">
-                <tr *ngFor="let key of filteredKeys | range:firstIndex:lastIndex"
-                    (click)="onRowClick(key)">
-                    <td *ngIf="showCheckboxes && data != null">
-                        <material-checkbox [disabled]="errorFunction != null && errorFunction(data[key]) != null"
-                                           [checked]="selectedRows.contains(key)"
-                                           (checkedChange)="onCheckedChange(key, $event)"
-                                           (click)="$event.stopPropagation()">
-                        </material-checkbox>
-                    </td>
-                    <td *ngIf="errorFunction != null && data != null">
-                        <material-icon *ngIf="errorFunction(data[key]) != null"
-                                       icon="warning"
-                                       [materialTooltip]="errorFunction(data[key]) | capitalize"
-                                       size="medium"></material-icon>
-                    </td>
-                    <td *ngFor="let cell of columns.keys">
-                        <span *ngIf="!isBool(getCell(key, cell))">{{getCell(key, cell)}}</span>
-                        <material-icon *ngIf="getCell(key, cell) == true"
-                                       baseline
-                                       icon="check"
-                                       size="x-small">
-                        </material-icon>
-                    </td>
-                    <td *ngFor="let cell of evaluatedColumns.keys">
-                        <span *ngIf="!isBool(getEvaluatedColumn(key, cell))">{{getEvaluatedColumn(key, cell)}}</span>
-                        <material-icon *ngIf="getEvaluatedColumn(key, cell) == true"
-                                       baseline
-                                       icon="check"
-                                       size="small">
-                        </material-icon>
-                    </td>
-                    <td *ngIf="showDeleteButtons"
-                        class="text-center">
-                        <material-icon class="clickable color-alert"
-                                       icon="delete_forever"
-                                       size="x-large"
-                                       (click)="deleteBufferId = key; $event.stopPropagation()">
-                        </material-icon>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+  <div class="output-container">
+    <table [class.faded]="disabled"
+           class="output margin-bottom-x-small">
+      <thead>
+        <tr>
+          <td *ngIf="showCheckboxes">
+            <material-checkbox [(checked)]="allChecked"></material-checkbox>
+          </td>
+          <td *ngIf="errorFunction != null"></td>
+          <td *ngFor="let cell of columns.keys"
+              (click)="onSort(cell)">
+            <span>{{columns[cell]}}</span>
+            <material-icon baseline
+                           size="small"
+                           [class.hidden]="sortColumn != cell || sortOrder == 'DESC'"
+                           icon="keyboard_arrow_up"></material-icon>
+            <material-icon baseline
+                           size="small"
+                           [class.hidden]="sortColumn != cell || sortOrder == 'ASC'"
+                           icon="keyboard_arrow_down"></material-icon>
+          </td>
+          <td *ngFor="let cell of evaluatedColumns.keys"
+              (click)="onSort(cell)">
+            <span>{{cell}}</span>
+            <material-icon baseline
+                           size="small"
+                           [class.hidden]="sortColumn != cell || sortOrder == 'DESC'"
+                           icon="keyboard_arrow_up"></material-icon>
+            <material-icon baseline
+                           size="small"
+                           [class.hidden]="sortColumn != cell || sortOrder == 'ASC'"
+                           icon="keyboard_arrow_down"></material-icon>
+          </td>
+          <td *ngIf="showDeleteButtons"
+              class="buttonCell"></td>
+        </tr>
+      </thead>
+      <tbody *ngIf="filteredKeys.isNotEmpty">
+        <tr *ngFor="let key of filteredKeys | range:firstIndex:lastIndex"
+            (click)="onRowClick(key)">
+          <td *ngIf="showCheckboxes && data != null">
+            <material-checkbox [disabled]="errorFunction != null && errorFunction(data[key]) != null"
+                               [checked]="selectedRows.contains(key)"
+                               (checkedChange)="onCheckedChange(key, $event)"
+                               (click)="$event.stopPropagation()">
+            </material-checkbox>
+          </td>
+          <td *ngIf="errorFunction != null && data != null">
+            <material-icon *ngIf="errorFunction(data[key]) != null"
+                           icon="warning"
+                           [materialTooltip]="errorFunction(data[key]) | capitalize"
+                           size="medium"></material-icon>
+          </td>
+          <td *ngFor="let cell of columns.keys">
+            <span *ngIf="!isBool(getCell(key, cell))">{{getCell(key, cell)}}</span>
+            <material-icon *ngIf="getCell(key, cell) == true"
+                           baseline
+                           icon="check"
+                           size="x-small">
+            </material-icon>
+          </td>
+          <td *ngFor="let cell of evaluatedColumns.keys">
+            <span *ngIf="!isBool(getEvaluatedColumn(key, cell))">{{getEvaluatedColumn(key, cell)}}</span>
+            <material-icon *ngIf="getEvaluatedColumn(key, cell) == true"
+                           baseline
+                           icon="check"
+                           size="small">
+            </material-icon>
+          </td>
+          <td *ngIf="showDeleteButtons"
+              class="text-center">
+            <material-icon class="clickable color-alert"
+                           icon="delete_forever"
+                           size="x-large"
+                           (click)="deleteBufferId = key; $event.stopPropagation()">
+            </material-icon>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+  <div class="row expand"
+       *ngIf="filteredKeys?.isEmpty == true">
+    <div class="col"
+         *ngIf="disabled">
+      <p class="text-center">
+        <material-spinner></material-spinner>
+      </p>
     </div>
-    <div class="row expand"
-         *ngIf="filteredKeys?.isEmpty == true">
-        <div class="col"
-             *ngIf="disabled">
-            <p class="text-center">
-                <material-spinner></material-spinner>
-            </p>
-        </div>
-        <div class="col color-alert text-center"
-             *ngIf="!disabled">
-            <p class="margin-bottom-none">
-                <material-icon baseline
-                               size="x-large"
-                               icon="error"></material-icon>
-                {{msgNoResultsFound | capitalize}}
-            </p>
-        </div>
+    <div class="col color-alert text-center"
+         *ngIf="!disabled">
+      <p class="margin-bottom-none">
+        <material-icon baseline
+                       size="x-large"
+                       icon="error"></material-icon> {{msgNoResultsFound | capitalize}}
+      </p>
     </div>
-    <div class="row expand">
-        <div class="s2 col">
-            <div *ngIf="showDownloadButton || showAddButton">
-                <material-button *ngIf="filteredKeys.isNotEmpty && showDownloadButton"
-                                 class="float-left"
-                                 clear-size
-                                 raised
-                                 dense
-                                 [disabled]="disabled || data?.isEmpty == true"
-                                 [materialTooltip]="msgDownloadCsv"
-                                 (trigger)="onDownloadDataCSV()">
-                    <material-icon class="black-color"
-                                   size="medium"
-                                   icon="file_download"></material-icon>
-                </material-button>
-                <material-button class="float-left"
-                                 *ngIf="showAddButton"
-                                 clear-size
-                                 raised
-                                 dense
-                                 [disabled]="disabled"
-                                 [materialTooltip]="msgAdd"
-                                 (trigger)="onAddController.add('')">
-                    <material-icon class="black-color"
-                                   size="medium"
-                                   icon="add"></material-icon>
-                </material-button>
-            </div>
-        </div>
-        <div *ngIf="filteredKeys.isNotEmpty"
-             class="s10 col">
-            <div id="select-step">
-                <div class="float-right"
-                     id="rows-per-page">
-                    <span>{{msgRows}}/{{msgPage}}:&nbsp;</span>
-                    <fo-select class="display-inline-block"
-                               [disabled]="disabled"
-                               [options]="rowOptions"
-                               [sort]="false"
-                               [selectedId]="selectedRowOptionId"
-                               (selectedIdChange)="selectedRowOptionId = $event; setIndices(0);">
-                    </fo-select>
-                </div>
-                <div class="float-right">
-                    <material-icon class="clickable vertical-align-middle"
-                                   [class.disabled]="firstIndex <= 0"
-                                   icon="navigate_before"
-                                   (click)="step(-1)">
-                    </material-icon>
-                    {{msgPage}} {{currentPage}}/{{totalPages}} ({{filteredKeys.length}} {{msgRows}})
-                    <material-icon class="clickable vertical-align-middle"
-                                   [class.disabled]="lastIndex >= filteredKeys.length"
-                                   icon="navigate_next"
-                                   (click)="step(1)">
-                    </material-icon>
-                </div>
-            </div>
-        </div>
+  </div>
+  <div class="row expand">
+    <div class="s2 col">
+      <div *ngIf="showDownloadButton || showAddButton">
+        <fo-button *ngIf="filteredKeys.isNotEmpty && showDownloadButton"
+                   class="float-left"
+                   clearSize
+                   dense
+                   [disabled]="disabled || data?.isEmpty == true"
+                   [materialTooltip]="msgDownloadCsv"
+                   (trigger)="onDownloadDataCSV()"
+                   icon="file_download">
+        </fo-button>
+        <fo-button class="float-left"
+                   *ngIf="showAddButton"
+                   clearSize
+                   dense
+                   [disabled]="disabled"
+                   [materialTooltip]="msgAdd"
+                   icon="add"
+                   (trigger)="onAddController.add('')">
+        </fo-button>
+      </div>
     </div>
+    <div *ngIf="filteredKeys.isNotEmpty"
+         class="s10 col">
+      <div id="select-step">
+        <div class="float-right"
+             id="rows-per-page">
+          <span>{{msgRows}}/{{msgPage}}:&nbsp;</span>
+          <fo-dropdown-select class="display-inline-block"
+                              [disabled]="disabled"
+                              [options]="rowOptions"
+                              [selectedId]="selectedRowId"
+                              (selectedIdChange)="selectedRowId = $event; setIndices(0);">
+          </fo-dropdown-select>
+        </div>
+        <div class="float-right">
+          <material-icon class="clickable vertical-align-middle"
+                         [class.disabled]="firstIndex <= 0"
+                         icon="navigate_before"
+                         (click)="step(-1)">
+          </material-icon> {{msgPage}} {{currentPage}}/{{totalPages}} ({{filteredKeys.length}} {{msgRows}})
+          <material-icon class="clickable vertical-align-middle"
+                         [class.disabled]="lastIndex >= filteredKeys.length"
+                         icon="navigate_next"
+                         (click)="step(1)">
+          </material-icon>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
-
 <div class="row expand"
-     *ngIf="batchOperations != null && batchOperations.isNotEmpty && showCheckboxes == true">
-    <div class="l8 m6 s0 col"></div>
-    <div class="l4 m6 col">
-        <div class="batch-operations-container box-shadow"
-             [class.expanded]="selectedRows.isNotEmpty">
-            <fo-select [label]="msgWithSeleced"
-                       [showActionButton]="true"
-                       actionButtonText="go"
-                       [disabled]="disabled || selectedRows == null || selectedRows.isEmpty"
-                       [options]="batchOperations"
-                       [selectedId]="batchOperations.first.id"
-                       [sort]="false"
-                       (actionButtonTrigger)="onBatchOperationTrigger($event)">
-            </fo-select>
-        </div>
+     *ngIf="batchOperations != null && batchOperations.isNotEmpty && batchOperations.values.first.isNotEmpty && showCheckboxes == true">
+  <div class="l8 m6 s0 col"></div>
+  <div class="l4 m6 col">
+    <div class="batch-operations-container box-shadow"
+         [class.expanded]="selectedRows.isNotEmpty">
+      <fo-dropdown-select [label]="msgWithSeleced"
+                          [disabled]="disabled || selectedRows == null || selectedRows.isEmpty"
+                          [options]="batchOperations"
+                          [selectedId]="batchOperations.values.first.first.id">
+      </fo-dropdown-select>
     </div>
+  </div>
 </div>
-
 <fo-modal title="{{msgConfirm | capitalize}}"
           [smallPadding]="false"
           [visible]="deleteBufferId != null"
           (visibleChange)="deleteBufferId = null"
           [showCloseButton]="false">
-    <p>{{msgConfirmDeleteResource}}</p>
-    <p class="text-right margin-bottom-none"
-       footer>
-        <material-button raised
-                         (trigger)="deleteBufferId = null">
-            {{msgCancel}}
-        </material-button>
-        <material-button raised
-                         (trigger)="onDeleteController.add(deleteBufferId); deleteBufferId = null;">
-            {{msgOk}}
-        </material-button>
-    </p>
+  <p>{{msgConfirmDeleteResource}}</p>
+  <p class="text-right margin-bottom-none"
+     footer>
+    <fo-button (trigger)="deleteBufferId = null"> {{msgCancel | capitalize}} </fo-button>
+    <fo-button (trigger)="onDeleteController.add(deleteBufferId); deleteBufferId = null;"> {{msgOk | capitalize}}
+    </fo-button>
+  </p>
 </fo-modal>
-
 <fo-modal [title]="msgInformation"
-          [smallPadding]="false"          
+          [smallPadding]="false"
           [(visible)]="infoModalOpen"
           [showCloseButton]="true">
-    <p>{{description}}</p>
+  <p>{{description}}</p>
 </fo-modal>
