replaced lots of angular components in FoDataTable

--- a/lib/components/fo_data_table/fo_data_table_component.scss
+++ b/lib/components/fo_data_table/fo_data_table_component.scss
@@ -1,10 +1,16 @@
 @import 'package:grid_css/grid';
+@import '../fo_button/mixins';
+@import '../fo_text_input/mixins';
+@import '../fo_dropdown_select/mixins';
 @import '../../mixins.scss';
 
 :host {
     display: block;
     width: 100%;
     color: #555;    
+    @include fo-text-input-font-size(0.8rem);
+    @include fo-dropdown-select-font-size(0.8rem);
+    @include fo-button-font-size(0.7rem);
     .display-inline-block {
         display: inline-block;
     }
@@ -108,7 +114,9 @@ div.table-container {
         }
     }
     #select-step {
-        // margin-top: 0.2rem;
+        div#stepper {
+          line-height: 1.9rem;
+        }
         #rows-per-page {
             margin-top: 0.15rem;
             margin-left: 0.2rem;
