--- a/lib/components/fo_text_input/fo_textarea_input_component.scss
+++ b/lib/components/fo_text_input/fo_textarea_input_component.scss
@@ -6,6 +6,7 @@
   position: relative;
   
   textarea {    
+    background-color: white;
     resize: none;    
     border-radius: $borderRadius;
     @include inputStyle;
