--- a/lib/components/fo_button/fo_button_component.scss
+++ b/lib/components/fo_button/fo_button_component.scss
@@ -1,28 +1,34 @@
 @import 'package:angular_components/material_icon/mixins';
 @import 'package:grid_css/constants';
 @import '../../constants.scss';
+
 :host {
-  display: inline-block;  
+  display: inline-block;
+
   button {
     width: 100%;
     font-size: 1rem;
     @include material-icon-size(1.5rem);
     user-select: none;
     -webkit-user-select: none;
-    transition: color 0.3s ease, background-color 0.3s ease;
+    transition: color 0.3s ease, border-color 0.3s ease, background-color 0.3s ease;
     cursor: pointer;
     padding: $small $x-large;
     outline: none;
     border-width: 1px;
-    border-style: solid;
+    border-style: solid;    
     box-sizing: border-box;
     color: white;
     line-height: 200%;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis;    
+    text-overflow: ellipsis;
     border-radius: $x-small;
-}
+
+    material-icon {
+      margin: 0;
+    }
+  }
 }
 
 :host[noLeftBorder] {
@@ -44,15 +50,14 @@
 :host[dense] {
   button {
     padding: $small $large;
-    line-height: $font-size-4;
-    font-size: 1rem;
+    line-height: 100%;   
   }
 }
 
 :host[white] {
   button {
     color: inherit;
-    background-color: white;
+    background-color: white;    
   }
 }
 
@@ -64,7 +69,8 @@
 }
 
 :host[fullWidth] {
-  width: 100%;  
+  width: 100%;
+
   button {
     padding-left: $small;
     padding-right: $small;
