--- a/lib/components/fo_data_table/fo_data_table_component.html
+++ b/lib/components/fo_data_table/fo_data_table_component.html
@@ -10,8 +10,9 @@
     </h3>
   </div>
   <div class="m5 l4 col text-right">
-    <fo-text-input class="text-left"
+    <fo-text-input class="text-left margin-bottom-x-small"
                    [disabled]="disabled"
+                   dense
                    [label]="msgFilter | capitalize"
                    trailingGlyph="search"
                    [(ngModel)]="searchPhrase"
@@ -27,7 +28,8 @@
       <thead>
         <tr>
           <td *ngIf="showCheckboxes">
-            <material-checkbox [(checked)]="allChecked"></material-checkbox>
+            <material-checkbox [disabled]="disabled"
+                               [(checked)]="allChecked"></material-checkbox>
           </td>
           <td *ngIf="errorFunction != null"></td>
           <td *ngFor="let cell of columns.keys"
@@ -62,7 +64,7 @@
         <tr *ngFor="let key of filteredKeys | range:firstIndex:lastIndex"
             (click)="onRowClick(key)">
           <td *ngIf="showCheckboxes && data != null">
-            <material-checkbox [disabled]="errorFunction != null && errorFunction(data[key]) != null"
+            <material-checkbox [disabled]="disabled || (errorFunction != null && errorFunction(data[key]) != null)"
                                [checked]="selectedRows.contains(key)"
                                (checkedChange)="onCheckedChange(key, $event)"
                                (click)="$event.stopPropagation()">
@@ -95,7 +97,7 @@
             <material-icon class="clickable color-alert"
                            icon="delete_forever"
                            size="x-large"
-                           (click)="deleteBufferId = key; $event.stopPropagation()">
+                           (click)="onDeleteRow(key, $event)">
             </material-icon>
           </td>
         </tr>
@@ -126,6 +128,7 @@
                    class="float-left"
                    clearSize
                    dense
+                   white
                    [disabled]="disabled || data?.isEmpty == true"
                    [materialTooltip]="msgDownloadCsv"
                    (trigger)="onDownloadDataCSV()"
@@ -135,6 +138,7 @@
                    *ngIf="showAddButton"
                    clearSize
                    dense
+                   white
                    [disabled]="disabled"
                    [materialTooltip]="msgAdd"
                    icon="add"
@@ -143,26 +147,28 @@
       </div>
     </div>
     <div *ngIf="filteredKeys.isNotEmpty"
-         class="s10 col">
+         class="s10 col align-middle">
       <div id="select-step">
         <div class="float-right"
              id="rows-per-page">
           <span>{{msgRows}}/{{msgPage}}:&nbsp;</span>
           <fo-dropdown-select class="display-inline-block"
                               [disabled]="disabled"
+                              dense
                               [options]="rowOptions"
                               [selectedId]="selectedRowId"
                               (selectedIdChange)="selectedRowId = $event; setIndices(0);">
           </fo-dropdown-select>
         </div>
-        <div class="float-right">
+        <div class="float-right"
+             id="stepper">
           <material-icon class="clickable vertical-align-middle"
-                         [class.disabled]="firstIndex <= 0"
+                         [class.disabled]="disabled || firstIndex <= 0"
                          icon="navigate_before"
                          (click)="step(-1)">
           </material-icon> {{msgPage}} {{currentPage}}/{{totalPages}} ({{filteredKeys.length}} {{msgRows}})
           <material-icon class="clickable vertical-align-middle"
-                         [class.disabled]="lastIndex >= filteredKeys.length"
+                         [class.disabled]="disabled || lastIndex >= filteredKeys.length"
                          icon="navigate_next"
                          (click)="step(1)">
           </material-icon>
@@ -178,9 +184,12 @@
     <div class="batch-operations-container box-shadow"
          [class.expanded]="selectedRows.isNotEmpty">
       <fo-dropdown-select [label]="msgWithSeleced"
+                          dense
+                          [actionButtonLabel]="msgGo | capitalize"
                           [disabled]="disabled || selectedRows == null || selectedRows.isEmpty"
                           [options]="batchOperations"
-                          [selectedId]="batchOperations.values.first.first.id">
+                          (actionButtonTrigger)="onActionButtonTrigger()"
+                          [(selectedId)]="selectedBatchOperation">
       </fo-dropdown-select>
     </div>
   </div>
@@ -193,8 +202,16 @@
   <p>{{msgConfirmDeleteResource}}</p>
   <p class="text-right margin-bottom-none"
      footer>
-    <fo-button (trigger)="deleteBufferId = null"> {{msgCancel | capitalize}} </fo-button>
-    <fo-button (trigger)="onDeleteController.add(deleteBufferId); deleteBufferId = null;"> {{msgOk | capitalize}}
+    <fo-button [label]="msgCancel | capitalize"
+               dense
+               noRightBorder
+               clearSize
+               (trigger)="deleteBufferId = null"></fo-button>
+    <fo-button [label]="msgOk | capitalize"
+               dense
+               noLeftBorder
+               clearSize
+               (trigger)="onDeleteController.add(deleteBufferId); deleteBufferId = null;">
     </fo-button>
   </p>
 </fo-modal>
