--- a/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
+++ b/lib/components/fo_dropdown_list/fo_dropdown_list_component.scss
@@ -7,6 +7,7 @@
     position: fixed;
     z-index: 99;
     div#dropdownContent {
+      text-align: left;
       background-color: white;
       padding-bottom: $medium;
       border-width: 1px;
