--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.html
@@ -1,15 +1,25 @@
-<fo-label [value]="label"
-          (click)="onClick($event)">
-  <div id="selector"
-       class="gray-color-bright"
-       [class.disabled]="disabled == true"
-       [class.focus]="dropdownVisible">
-    <div id="selectedValue"> {{selectedOption == null ? '-' : selectedOption.label}} </div>
-    <material-icon class="arrow"
-                   baseline
-                   icon="keyboard_arrow_down"></material-icon>
-  </div>
-</fo-label>
+<div id="flexAligner">
+  <fo-label [value]="label"
+            (click)="onClick($event)">
+    <div id="selector"
+         class="gray-color-bright"
+         [class.noRightBorder]="actionButtonLabel != null"
+         [class.disabled]="disabled == true"
+         [class.focus]="dropdownVisible">
+      <div id="selectedValue"> {{selectedOption == null ? '-' : selectedOption.label}} </div>
+      <material-icon class="arrow"
+                     baseline
+                     icon="keyboard_arrow_down"></material-icon>
+    </div>
+  </fo-label>
+  <fo-button *ngIf="actionButtonLabel != null"
+             [label]="actionButtonLabel"
+             noLeftBorder
+             dense
+             clearSize
+             [disabled]="disabled || selectedOption == null"
+             (trigger)="actionButtonController.add($event)"></fo-button>
+</div>
 <fo-dropdown-list *ngIf="options != null && dropdownVisible == true && disabled != true"
                   [options]="options"
                   [width]="dropdownWidth"
