--- a/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
+++ b/lib/components/fo_dropdown_select/fo_dropdown_select_component.scss
@@ -6,71 +6,92 @@
   position: relative;
   cursor: pointer;
 
-  div#labelContainer {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-  }
-
-  div#selector {
-    transition: box-shadow $transitionSpeed;
+  div#flexAligner {
     display: flex;
-    align-items: center;
-    border-width: 1px;
-    border-style: solid;
-    border-radius: $x-small;
+    align-items: flex-end;
+    fo-label {
+      flex: auto;
+    }
+    div#selector {      
+      background-color: white;
+      transition: box-shadow $transitionSpeed;
+      display: flex;
+      align-items: center;
+      border-width: 1px;
+      border-style: solid;
+      border-radius: $x-small;
 
-    div#selectedValue {
-      flex: 1;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-      padding: $small $medium;
-      line-height: 200%;
-      color: #555;
-      user-select: none;
+      div#selectedValue {
+        flex: 1;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        padding: $small $medium;
+        line-height: 200%;
+        color: #555;
+        user-select: none;
+      }
+
+      material-icon.arrow {
+        margin: 0 $small;
+        color: #555;
+      }
     }
 
-    material-icon.arrow {
-      margin: 0 $small;
-      color: #555;
+    div#selector.noRightBorder {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+      border-right-width: 0;
     }
-  }
 
-  div#selector.focus {
-    @include boxShadow();
+    div#selector.focus {
+      @include boxShadow();
+    }
   }
 }
 
 :host[centerValue] {
-  div#selector {
-    div#selectedValue {
-      text-align: center;
-    }
-
-    div#selectedValue::before {
-      content: '';
-      display: inline-block;
-      width: 1em;
-      margin: $small;
-
+  div#flexAligner {
+    div#selector {
+      div#selectedValue {
+        text-align: center;
+      }
+      div#selectedValue::before {
+        content: '';
+        display: inline-block;
+        width: 1em;
+        margin: $small;
+      }
     }
   }
 }
 
 :host[noLeftBorder] {
-  div#selector {
-    border-top-left-radius: 0;
-    border-bottom-left-radius: 0;
-    border-left-width: 0;
+  div#flexAligner {
+    div#selector {
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+      border-left-width: 0;
+    }
   }
 }
 
 :host[noRightBorder] {
-  div#selector {
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-    border-right-width: 0;
+  div#flexAligner {
+    div#selector {
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+      border-right-width: 0;
+    }
   }
+}
 
+:host[dense] {
+  div#flexAligner {
+    div#selector {
+      div#selectedValue {
+        line-height: 100%;
+      }
+    }
+  }
 }
