added TabPanel documentation

--- a/lib/components/fo_tab/fo_tab_panel_component.html
+++ b/lib/components/fo_tab/fo_tab_panel_component.html
@@ -1,21 +1,19 @@
 <div id="tabStrip">
-    <div *ngFor="let tab of tabs"
-         class="tabButton"
-         [style.color]="color(tab)"
-         [style.background-color]="backgroundColor(tab)"
-         (click)="onTabClick(tab)">
-        <h1 *ngIf="tab.icon != null"
-            class="margin-top-small margin-bottom-small"
-            [class.hide-for-small]="hideIcons('small')"
-            [class.hide-for-medium]="hideIcons('medium')"
-            [class.hide-for-large]="hideIcons('large')">
-            <fo-icon [icon]="tab.icon"></fo-icon> 
-        </h1>
-        <p class="margin-top-none margin-bottom-none"
-           [class.hide-for-small]="hideLabels('small')"
-           [class.hide-for-medium]="hideLabels('medium')"
-           [class.hide-for-large]="hideLabels('large')"> {{tab.label}} </p>
-    </div>
+  <div *ngFor="let tab of tabs"
+       class="tabButton"
+       [style.color]="color(tab)"
+       [style.background-color]="backgroundColor(tab)"
+       (click)="onTabClick(tab)">
+    <h1 *ngIf="tab.icon != null"
+        [class.hide-for-small]="hideIcons('small')"
+        [class.hide-for-medium]="hideIcons('medium')"
+        [class.hide-for-large]="hideIcons('large')">
+      <fo-icon [icon]="tab.icon"></fo-icon>
+    </h1>
+    <p [class.hide-for-small]="hideLabels('small')"
+       [class.hide-for-medium]="hideLabels('medium')"
+       [class.hide-for-large]="hideLabels('large')"> {{tab.label}} </p>
+  </div>
 </div>
 <ng-content>
 </ng-content>
